@@ -1,12 +1,16 @@
 package tests;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import pageobjects.HomePageScooter;
 
-import java.util.Arrays;
+import java.io.File;
+import java.io.IOException;
 import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.assertTrue;
 
@@ -25,17 +29,17 @@ public class FAQTest extends BaseTest {
     public String expectedAnswer;
 
     @Parameterized.Parameters
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
-                {"chrome", 0, "Сутки — 400 рублей. Оплата курьеру — наличными или картой."},
-                {"firefox", 1, "Пока что у нас так: один заказ — один самокат. Если хотите покататься с друзьями, можете просто сделать несколько заказов — один за другим."},
-                {"chrome", 2, "Допустим, вы оформляете заказ на 8 мая. Мы привозим самокат 8 мая в течение дня. Отсчёт времени аренды начинается с момента, когда вы оплатите заказ курьеру. Если мы привезли самокат 8 мая в 20:30, суточная аренда закончится 9 мая в 20:30."},
-                {"firefox", 3, "Только начиная с завтрашнего дня. Но скоро станем расторопнее."},
-                {"chrome", 4, "Пока что нет! Но если что-то срочное — всегда можно позвонить в поддержку по красивому номеру 1010."},
-                {"firefox", 5, "Самокат приезжает к вам с полной зарядкой. Этого хватает на восемь суток — даже если будете кататься без передышек и во сне. Зарядка не понадобится."},
-                {"chrome", 6, "Да, пока самокат не привезли. Штрафа не будет, объяснительной записки тоже не попросим. Все же свои."},
-                {"firefox", 7, "Да, обязательно. Всем самокатов! И Москве, и Московской области."},
-        });
+    public static List<Object[]> data() throws IOException {
+        // Чтение данных из JSON-файла
+        ObjectMapper mapper = new ObjectMapper();
+        List<TestData> testDataList = List.of(mapper.readValue(new File("src/test/resources/faqTestData.json"), TestData[].class));
+
+        // Генерация параметров
+        return testDataList.stream()
+                .map(data -> new Object[]{
+                        data.browserType, data.questionIndex, data.expectedAnswer
+                })
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -45,6 +49,7 @@ public class FAQTest extends BaseTest {
 
     @Override
     protected void setUpTestSpecific() {
+        // Инициализация страницы
         homePage = new HomePageScooter(driver);
         homePage.closeCookieBanner();
         logger.info("Баннер с cookies закрыт.");
@@ -52,10 +57,25 @@ public class FAQTest extends BaseTest {
 
     @Test
     public void testFAQSection() {
+        logger.info("Начало теста FAQ для браузера: " + browserType);
+
+        // Скролл до секции FAQ
         homePage.scrollToFAQ();
+
+        // Клик по вопросу и проверка ответа
         homePage.clickQuestion(questionIndex);
-        assertTrue(homePage.isAnswerVisible(questionIndex)
-                && homePage.getAnswerText(questionIndex).contains(expectedAnswer));
-        logger.info("Ответ на вопрос {} успешно проверен.", questionIndex);
+        assertTrue("Ответ не совпадает с ожидаемым!",
+                homePage.isAnswerVisible(questionIndex) &&
+                        homePage.getAnswerText(questionIndex).contains(expectedAnswer)
+        );
+
+        logger.info("Ответ на вопрос {} успешно проверен в браузере {}.", questionIndex, browserType);
+    }
+
+    // Класс для представления данных из JSON
+    static class TestData {
+        public String browserType;
+        public int questionIndex;
+        public String expectedAnswer;
     }
 }
